--- a/notification-service/src/main/resources/templates/reset-password.html
+++ b/notification-service/src/main/resources/templates/reset-password.html
@@ -62,7 +62,8 @@
             <h1>Welcome to Our Service!</h1>
         </div>
         <div class="content">
-            <p>Hello <span th:text="${username}" style="font-weight: bold; color: #0083b0;">User</span>,</p>
+            <p>Hello <span th:text="${firstname + ' ' + lastname}"
+                    style="font-weight: bold; color: #0083b0;">User</span>,</p>
             <p>Your account has been successfully created. To get started, please set your password by clicking the
                 button below:</p>
 
