--- a/notification-service/src/main/resources/templates/welcome.html
+++ b/notification-service/src/main/resources/templates/welcome.html
@@ -109,7 +109,7 @@
             <h1>Welcome Aboard!</h1>
         </div>
         <div class="content">
-            <p>Hello <span th:text="${username}" class="highlight">User</span>,</p>
+            <p>Hello <span th:text="${firstname + ' ' + lastname}" class="highlight">User</span>,</p>
             <p>We are absolutely thrilled to have you join our <span class="highlight">Hotel Management System</span>.
                 Your account is now active and ready to use.</p>
 
