--- a/notification-service/src/main/resources/templates/login-alert.html
+++ b/notification-service/src/main/resources/templates/login-alert.html
@@ -96,14 +96,20 @@
             <h1>Login Security Alert</h1>
         </div>
         <div class="content">
-            <p>Hello <span th:text="${username}" style="font-weight: bold; color: #764ba2;">User</span>,</p>
+            <p>Hello <span th:text="${firstname + ' ' + lastname}"
+                    style="font-weight: bold; color: #764ba2;">User</span>,</p>
             <p>We noticed a new login to your account. If this was you, you can safely ignore this email.</p>
 
             <div class="user-info">
-                <div><strong>User ID:</strong> <span th:text="${userId}">-</span></div>
+                <!-- <div><strong>User ID:</strong> <span th:text="${userId}">-</span></div> -->
                 <div><strong>Email:</strong> <span th:text="${email}">-</span></div>
-                <div><strong>Time:</strong> <span
-                        th:text="${#calendars.format(#calendars.createNow(), 'dd MMM yyyy, HH:mm:ss')}">Now</span></div>
+                <div>
+                    <strong>Time:</strong>
+                    <span th:text="${#temporals.format(currentTime, 'dd MMM yyyy, HH:mm:ss')}">
+                    </span>
+                </div>
+                <!-- <div><strong>Time:</strong> <span
+                        th:text="${#calendars.format(#calendars.createNow(), 'dd MMM yyyy, HH:mm:ss')}">Now</span></div> -->
             </div>
 
             <p>If you don't recognize this activity, please secure your account immediately by resetting your password.
